--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 
 [compat]
 julia = "1.6"
+Optimization = "3"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
